--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@types/node": "^16.18.18",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "bootstrap": "^5.3.0-alpha1",
+    "i": "^0.3.7",
+    "node-sass": "^7.0.3",
+    "npm": "^9.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
